# nestdictutils

./: README.md  readthedocs.yaml  requirements.txt  setup.py
docs/source/: conf.py  nestdictutils.rst
nestdictutils/: __init__.py  dirtytest.py  pyproject.toml  utils.py
nestdictutils/examples/: nestdictutils_examples.ipynb
