#------------------------------- Build -------------------------------#


# Options to build the package
[build-system]

# Which packages are required to build the packages
requires = ["setuptools>=67.7.2", "wheel"]

# Which backend to use to build the package
build-backend = "setuptools.build_meta"


#------------------------------ Project ------------------------------#


# Project metadata
[project]

# The name of the project (required key)
name = "nestdictutils"

# The version of the project as supported by PEP 440
version = "2023.0.0"

# The summary description of the project
description = "Utilities to manipulate nested dictionaries"

# The full description of the project (i.e. the README). The key
# accepts either a string or a table. If it is a string then it is a
# path relative to pyproject.toml to a text file containing the full
# description.
# The readme key may also take a table. The file key has a string
# value representing a path relative to pyproject.toml to a file
# containing the full description. The text key has a string value
# which is the full description. These keys are mutually exclusive,
readme = {file = "README.txt", content-type = "text/markdown"}

# The Python version requirements of the project.
requires-python = ">=3.9"

# License file
license = { file = "LICENSE" }

# Package's author(s)
authors = [
    {name = "Valentina Sora"}, 
    {email = "sora.valentina1@gmail.com"}
]

# Classifiers to categorize the package
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Topic :: Utilities"
]

# Keywords to facilitate finding the package on PyPI
keywords = [
    "dictionaries",
    "utilities",
    "recursion",
    "algorithms"
]

# Package dependencies
dependencies = [
    "pytest"
]


#-------------------------------- URL --------------------------------#


[project.urls]
Homepage = "https://github.com/ValeSora/nestdictutils"

